--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
 <%= link_to 'are you a refugee', new_refugee_path, class: "waves-effect waves-light btn" %>
 
-<a href= <img src="../../shutterstock_328528877.jpg"</a>
+<a href= <img src="../../shutterstock_328528877.jpg"></a>
 
 
 </p>
